--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="ko-kr">
 <head>
     <title>이상현 IN 베를린 :: About</title>
-    <meta name="description" content="베를린 사는 개발자 이야기">
+    <meta name="description" content="베를린 사는 소프토웨어 엔지니어 이야기">
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow">
