--- a/404/index.html
+++ b/404/index.html
@@ -60,7 +60,7 @@
         </div>
     </section>
 <div class="container article">
-    <h3>Page not found</h3> <p>Sorry if you couldn't find what you want. Take a look at my cat instead.</p><p><img src="/img/yang.jpg" alt="My cat" /></p>
+    <h3>Page not found</h3> <p>Sorry if you couldn't find what you want. Take a look at my cat instead.</p><p>If you think there's something wrong with this site, please report to hammerha@gmail.com.</p><p><img src="/img/yang.jpg" alt="My cat" /></p>
 </div>
     <section class="signup">
         <div class="container2">
