--- a/about/index.html
+++ b/about/index.html
@@ -43,6 +43,16 @@
 
 </head>
 <body>
+    <section class="top">
+        <nav>
+            <a href="/"><span>글</span></a>
+            <a href="/about"><span>소개</span></a>
+            <a href="/popular"><span>인기글</span></a>
+            <a href="/subscribe"><span>구독</span></a>
+            <a href="https://twitter.com/sangdolha"><span>트위터</span></a>
+        </nav>
+    </section>
+    <hr class="top-line">
     <section class="header">
         <div class="container">
             <div class="content">
@@ -53,9 +63,6 @@
                         <span style="font-weight:300">베를린</span>
                     </div>
                 </a>
-                <nav>
-                    <a href="/about"><span>About</span></a>
-                </nav>
             </div>
         </div>
     </section>
