--- a/about/index.html
+++ b/about/index.html
@@ -67,7 +67,7 @@
         </div>
     </section>
 <div class="container article">
-    <p>안녕하세요, 이상현입니다.</p><p>독일 베를린에 살며 이커머스 기업 <a href='https://tech.zalando.com'>잘란도(Zalando)</a>에서 소프트웨어 엔지니어로 일하고 있습니다.</p><p>웹개발을 주로 하였으며 현재는 Clojure, 함수형 프로그래밍, 머신러닝에 관심을 가지고 있습니다. <a href='http://techneedle.com/'>테크니들</a>을 통해 가끔 <a href='http://techneedle.com/archives/author/sanghyun'>글을 쓰고</a> 있습니다.</p><p>글에 대한 의견이나 궁금한 사항은 이메일(hammerha@gmail.com)이나 <a href='https://twitter.com/sangdolha'>트위터</a>를 통해 알려주시면 답변 드리겠습니다.</p><p>블로그 새 글 소식을 받고 싶으신 분은 페이지 아래 양식을 통해 이메일 구독하거나 <a href='https://twitter.com/sangdolha'>트위터</a>를 이용해주시기 바랍니다.</p>
+    <p>안녕하세요, 이상현입니다.</p><p>독일 베를린에 살며 이커머스 기업 <a href='https://tech.zalando.com'>잘란도(Zalando)</a>에서 소프트웨어 엔지니어로 일하고 있습니다.</p><p>웹개발을 주로 하였으며 현재는 AI, 데이터와 관련한 일을 주로 하고 있습니다. <a href='http://techneedle.com/'>테크니들</a>을 통해 가끔 <a href='http://techneedle.com/archives/author/sanghyun'>글을 쓰고</a> 있습니다.</p><p>글에 대한 의견이나 궁금한 사항은 이메일(hammerha@gmail.com)을 통해 알려주시면 답변 드리겠습니다.</p><p>블로그 새 글 소식을 받고 싶으신 분은 페이지 아래 양식을 통해 이메일 구독하거나 <a href='https://twitter.com/sangdolha'>트위터</a>를 이용해주시기 바랍니다.</p>
 </div>
     <section class="signup">
         <div class="container2">
