--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -107,7 +107,7 @@
         </div>
     </section>
 <div class="container article">
-    <p>구독해주셔서 감사합니다!</p><p>저는 현재 독일 베를린에 살며 이커머스 기업 <a href='https://tech.zalando.com'>잘란도(Zalando)</a>에서 개발자로 일하고 있습니다.</p><p>블로그 이외에 <a href='http://techneedle.com/archives/author/sanghyun'>테크니들</a>을 통해 가끔 글을 쓰고 있습니다.</p><p>글에 대한 의견이나 궁금한 사항은 이메일(hammerha@gmail.com)을 통해 알려주시면 감사하겠습니다.</p><p><img src="/img/thank-you.jpg" alt="Thank you from Berlin" /></p>
+    <p>구독해주셔서 감사합니다!</p><p>저는 현재 독일 베를린에 살며 이커머스 기업 <a href='https://tech.zalando.com'>잘란도(Zalando)</a>에서 개발자로 일하고 있습니다.</p><p>블로그 이외에 <a href='http://techneedle.com/archives/author/sanghyun'>테크니들</a>을 통해 가끔 글을 쓰고 있습니다.</p><p>글에 대한 의견이나 궁금한 사항은 이메일(hammerha@gmail.com)을 통해 알려주시면 감사하겠습니다.</p><p><img src="https://iamsang.com/img/thank-you.jpg" alt="Thank you from Berlin" /></p>
 </div>
     <section class="signup">
         <div class="container2">
