--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -107,7 +107,7 @@
         </div>
     </section>
 <div class="container article">
-    <p><img src="https://iamsang.com/img/subscribe.jpg" alt="Subscribe" /></p>
+    <p><img src="https://iamsang.com/img/subscribe.jpg" alt="Berlin street" /></p><p>안녕하세요, 이상현입니다. 소프트웨어 엔지니어로 한국과 독일에 살며 겪은 기술, 문화, 커리어, 해외취업 등에 대한 이야기를 전해 드립니다.</p>
 </div>
     <section class="signup">
         <div class="container2">
