--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -10,18 +10,19 @@
     <meta name="twitter:title" content="Subscribe" />
     <meta name="twitter:description" content="베를린 사는 소프트웨어 엔지니어 이야기" />
     <meta name="twitter:creator" content="@sangdolha" />
+    <meta name="twitter:card" content="summary_large_image">
 
     
-    <meta name="twitter:card" content="summary" />
     <meta name="twitter:image" content="https://iamsang.com/logo.png" />
 
     
-<!--    <meta property="og:image" content="https://iamsang.com/facebook_image.png" />-->
-    <meta property="og:image" content="https://6d4cce4d12f2.ngrok.io/facebook_image.png" />
+    <meta property="og:image" content="https://iamsang.com/logo.png" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <link rel="shortcut icon" type="image/png" href="/icon-192x192.png">
+    <link rel="shortcut icon" sizes="192x192" href="/icon-192x192.png">
+    <link rel="apple-touch-icon" href="/icon-192x192.png">
+
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
