--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -86,7 +86,8 @@
 <body>
     <section class="top">
         <nav>
-            <a href="/"><span>글</span></a>
+            <a href="/"><span>홈</span></a>
+            <a href="/blog"><span>글</span></a>
             <a href="/about"><span>소개</span></a>
             <a href="/popular"><span>인기글</span></a>
             <a href="/subscribe"><span>구독</span></a>
