--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow">
-    <meta name="description" content="">
-    <meta name="twitter:title" content="" />
-    <meta name="twitter:description" content="" />
+    <meta name="description" content="Sanghyun Lee">
+    <meta name="twitter:title" content="Sanghyun Lee" />
+    <meta name="twitter:description" content="Sanghyun Lee" />
     <meta name="twitter:creator" content="@sangdolha" />
     <meta name="twitter:card" content="summary_large_image">
 
