--- a/en/index.html
+++ b/en/index.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow">
-    <meta name="description" content="Sanghyun Lee">
+    <meta name="description" content="I am Sang">
     <meta name="twitter:title" content="Sanghyun Lee" />
-    <meta name="twitter:description" content="Sanghyun Lee" />
+    <meta name="twitter:description" content="I am Sang" />
     <meta name="twitter:creator" content="@sangdolha" />
     <meta name="twitter:card" content="summary_large_image">
 
