--- a/en/index.html
+++ b/en/index.html
@@ -43,6 +43,7 @@
         <nav class="nav">
             <a href="/"><span>Home</span></a>
             <a href="/en"><span>Posts</span></a>
+            <a href="/en-about"><span>About</span></a>
             <a href="https://twitter.com/iamsangcom"><span>Twitter</span></a>
         </nav>
     </section>
@@ -57,6 +58,7 @@
             </div>
         </div>
     </section>
+
 <div class="container list">
     <div class="content">
         <ul class="no-padding-left">
