--- a/en-about/index.html
+++ b/en-about/index.html
@@ -24,8 +24,8 @@
     <link rel="apple-touch-icon" href="/icon-192x192.png">
 
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/default.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/highlight.min.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', (event) => {
       document.querySelectorAll('pre code').forEach((block) => {
@@ -38,12 +38,13 @@
     <link rel="stylesheet" href="/css/sakura.css">
     <link href="/css/custom.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </head>
 <body>
     <section class="top">
         <nav class="nav">
             <a href="/"><span>Home</span></a>
-            <a href="/en"><span>Posts</span></a>
+            <a href="/en"><span>Blog</span></a>
             <a href="/en-about"><span>About</span></a>
             <a href="https://twitter.com/iamsangcom"><span>Twitter</span></a>
         </nav>
@@ -53,15 +54,15 @@
         <div class="container">
             <div class="content">
                 <div class="name">
-                    I am
-                    <span class="colored" style="font-weight:100">Sang</span>
+                    <span class="colored" style="font-weight:100">I am</span>
+                    Sang
                 </div>
             </div>
         </div>
     </section>
 
 <div class="container article">
-    <p>Hello, I'm Sanghyun Lee.</p><p>I'm a software engineer from South Korea and living in Berlin now.</p><p>I've been working on topics like frontend, backend, distributed system, and data.</p><p>I use <a href='https://github.com/Sangdol/scala-test-driven-learning'>Scala</a> and <a href='https://github.com/Sangdol/python-test-driven-learning'>Python</a> these days and used to use <a href='https://github.com/Sangdol/java-test-driven-learning'>Java</a> and <a href='https://github.com/Sangdol/node-test-driven-learning'>JavaScript</a>.</p><p>I like writing tools for myself and this web site is built by <a href='https://github.com/sangdol/bluecheese'>a custom static site generator</a> written in <a href='https://github.com/Sangdol/clojure-test-driven-learning'>Clojure</a>.</p><p>I spend hours to automate things with <a href='https://github.com/Sangdol/vimscript-test-driven-learning'>Vimscript</a>, <a href='https://github.com/Sangdol/lua-test-driven-learning'>Lua</a> (and <a href='https://github.com/Sangdol/hammerspoon-config'>Hammerspoon</a>), bash, zsh, and fish script, and save seconds every day.</p><p>I use <a href='https://github.com/Sangdol/vimrc'>nvim</a>, IntelliJ, and iTerm2 to write code with a MacBook.</p>
+    <p>Hello, I'm Sanghyun Lee.</p><p>I'm a software engineer from South Korea and living in Berlin now.</p><p>I've been working on frontend, backend, distributed systems, and data-related topics.</p><p>I use <a href='https://github.com/Sangdol/scala-test-driven-learning'>Scala</a> and <a href='https://github.com/Sangdol/python-test-driven-learning'>Python</a> these days. I mainly used <a href='https://github.com/Sangdol/java-test-driven-learning'>Java</a> and <a href='https://github.com/Sangdol/node-test-driven-learning'>JavaScript</a> before.</p><p>I like writing tools for myself and this website is built by <a href='https://github.com/sangdol/bluecheese'>a custom static site generator</a> written in <a href='https://github.com/Sangdol/clojure-test-driven-learning'>Clojure</a>.</p><p>I spend hours automating things with <a href='https://github.com/Sangdol/vimscript-test-driven-learning'>Vimscript</a>, <a href='https://github.com/Sangdol/lua-test-driven-learning'>Lua</a> (and <a href='https://github.com/Sangdol/hammerspoon-config'>Hammerspoon</a>), bash, zsh, and fish script to save seconds.</p><p>To write code I use <a href='https://github.com/Sangdol/vimrc'>nvim</a>, IntelliJ, and iTerm2 with a MacBook.</p>
 </div>
     <section class="icons">
         <div class="container">
