--- a/en/index.html
+++ b/en/index.html
@@ -23,8 +23,8 @@
     <link rel="apple-touch-icon" href="/icon-192x192.png">
 
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/default.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/highlight.min.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', (event) => {
       document.querySelectorAll('pre code').forEach((block) => {
@@ -37,12 +37,13 @@
     <link rel="stylesheet" href="/css/sakura.css">
     <link href="/css/custom.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </head>
 <body>
     <section class="top">
         <nav class="nav">
             <a href="/"><span>Home</span></a>
-            <a href="/en"><span>Posts</span></a>
+            <a href="/en"><span>Blog</span></a>
             <a href="/en-about"><span>About</span></a>
             <a href="https://twitter.com/iamsangcom"><span>Twitter</span></a>
         </nav>
@@ -52,8 +53,8 @@
         <div class="container">
             <div class="content">
                 <div class="name">
-                    I am
-                    <span class="colored" style="font-weight:100">Sang</span>
+                    <span class="colored" style="font-weight:100">I am</span>
+                    Sang
                 </div>
             </div>
         </div>
