--- a/en-about/index.html
+++ b/en-about/index.html
@@ -2,13 +2,17 @@
 <html lang="en-us">
 <head>
     <title>I am Sang :: About</title>
-    <meta name="description" content="I'm a software engineer from South Korea and currently live in Berlin. I write articles and draw comics in Korean and English">
+    <meta name="description" content="I'm a software engineer from South Korea and
+                                          currently live in Berlin. I write articles and
+                                          draw comics in Korean and English.">
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow">
-    <meta name="description" content="I'm a software engineer from South Korea and currently live in Berlin. I write articles and draw comics in Korean and English">
+    <meta name="description" content="I'm a software engineer from South Korea and
+                                          currently live in Berlin. I write articles and
+                                          draw comics in Korean and English.">
     <meta name="twitter:title" content="About" />
-    <meta name="twitter:description" content="I'm a software engineer from South Korea and currently live in Berlin. I write articles and draw comics in Korean and English" />
+    <meta name="twitter:description" content="I am Sang" />
     <meta name="twitter:creator" content="@sangdolha" />
     <meta name="twitter:card" content="summary_large_image">
 
