--- a/en/index.html
+++ b/en/index.html
@@ -52,6 +52,14 @@
           ga('require', 'GTM-PGRQWF8');
           ga('send', 'pageview');
     </script>
+    <script>
+      // Open an image in a new window when it's clicked
+      $(document).ready(function() {
+        $('.article img').click(function() {
+          window.open($(this).attr('src'));
+        });
+      });
+    </script>
 
 </head>
 <body>
