--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -98,9 +98,9 @@
             <a href="/"><span>홈</span></a>
             <a href="/blog"><span>글</span></a>
             <a href="/about"><span>소개</span></a>
-            <a href="/popular"><span>인기글</span></a>
             <a href="/subscribe"><span>구독</span></a>
             <a href="https://twitter.com/sangdolha"><span>트위터</span></a>
+            <a href="https://careerly.co.kr/profiles/414463"><span>커리어리</span></a>
         </nav>
     </section>
     <hr class="top-line">
@@ -117,6 +117,7 @@
             </div>
         </div>
     </section>
+
 <div class="container article">
     <p><img src="https://iamsang.com/img/subscribe.jpg" alt="Berlin street" /></p><p>안녕하세요, 이상현입니다. 소프트웨어 엔지니어로 한국과 독일에 살며 겪은 기술, 문화, 커리어, 해외취업 등에 대한 이야기를 전해 드립니다.</p>
 </div>
