--- a/en/index.html
+++ b/en/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:title" content="I am Sang" />
     <meta name="twitter:description" content="I am Sang" />
     <meta name="twitter:creator" content="@sangdolha" />
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
 
     
     <meta name="twitter:image" content="https://iamsang.com/social-logo.png" />
