--- a/404/index.html
+++ b/404/index.html
@@ -119,7 +119,7 @@
     </section>
 
 <div class="container article">
-    <h3 id="page-not-found">Page not found</h3> <p>Sorry if you couldn't find what you want. Take a look at my cat instead.</p><p>If you think there's something wrong with this site, please report to hammerha@gmail.com.</p><p><img src="https://iamsang.com/img/yang.jpg" alt="My cat" /></p>
+    <h3 id="page-not-found">Page not found</h3><p>Sorry if you couldn't find what you wanted.  Please take a look at my cat instead.</p><p>If you think there's something wrong with this site, please report it to hammerha@gmail.com.</p><p><img src="https://iamsang.com/img/yang.jpg" alt="My cat" /></p>
 </div>
     <section class="signup">
         <div class="container2">
