--- a/404/index.html
+++ b/404/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko-kr">
 <head>
-    <title>이상현 IN 베를린 :: Page not found 404</title>
-    <meta name="description" content="베를린 사는 소프트웨어 엔지니어 이야기">
+    <title>이상현 IN 유럽 :: Page not found 404</title>
+    <meta name="description" content="유럽 사는 소프트웨어 엔지니어 이야기">
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow">
-    <meta name="description" content="베를린 사는 소프트웨어 엔지니어 이야기">
+    <meta name="description" content="유럽 사는 소프트웨어 엔지니어 이야기">
     <meta name="twitter:title" content="Page not found 404" />
-    <meta name="twitter:description" content="베를린 사는 소프트웨어 엔지니어 이야기" />
+    <meta name="twitter:description" content="유럽 사는 소프트웨어 엔지니어 이야기" />
     <meta name="twitter:creator" content="@sangdolha" />
     <meta name="twitter:card" content="summary">
 
@@ -111,7 +111,7 @@
                     <div class="name">
                         이상현
                         <span class="colored" style="font-weight:100">in</span>
-                        <span style="font-weight:300">베를린</span>
+                        <span style="font-weight:300">유럽</span>
                     </div>
                 </a>
             </div>
