--- a/about/index.html
+++ b/about/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko-kr">
 <head>
-    <title>이상현 IN 베를린 :: About</title>
-    <meta name="description" content="베를린 사는 소프트웨어 엔지니어 이야기">
+    <title>이상현 IN 유럽 :: About</title>
+    <meta name="description" content="유럽 사는 소프트웨어 엔지니어 이야기">
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow">
-    <meta name="description" content="베를린 사는 소프트웨어 엔지니어 이야기">
+    <meta name="description" content="유럽 사는 소프트웨어 엔지니어 이야기">
     <meta name="twitter:title" content="About" />
-    <meta name="twitter:description" content="베를린 사는 소프트웨어 엔지니어 이야기" />
+    <meta name="twitter:description" content="유럽 사는 소프트웨어 엔지니어 이야기" />
     <meta name="twitter:creator" content="@sangdolha" />
     <meta name="twitter:card" content="summary">
 
@@ -111,7 +111,7 @@
                     <div class="name">
                         이상현
                         <span class="colored" style="font-weight:100">in</span>
-                        <span style="font-weight:300">베를린</span>
+                        <span style="font-weight:300">유럽</span>
                     </div>
                 </a>
             </div>
@@ -119,7 +119,7 @@
     </section>
 
 <div class="container article">
-    <p>안녕하세요, 이상현입니다.</p><p><a href='https://iamsang.com/blog/2017/10/30/berlin-over-silicon-valley/'>독일 베를린</a>에 살며 소프트웨어 엔지니어로 일하고 있습니다.</p><h3 id="">글</h3><p>블로그 이외에 다음과 같은 곳에서 글을 쓰고 있습니다.</p><ul><li><a href='https://iamsang.com/en/'>영어 블로그</a></li><li><a href='http://techneedle.com/archives/author/sanghyun'>테크니들</a></li><li><a href='https://twitter.com/sangdolha'>트위터</a></li><li><a href='https://careerly.co.kr/profiles/414463'>커리어리</a></li><li><a href='https://stackoverflow.com/users/524588/sanghyun-lee'>스택오버플로</a></li></ul><p>글에 대한 의견이나 궁금한 사항은 이메일(hammerha@gmail.com)을 통해 알려주시면 답변 드리겠습니다. 블로그 새 글 소식을 받고 싶으신 분은 페이지 아래 양식을 통해 이메일 구독하거나 <a href='https://twitter.com/sangdolha'>트위터</a>를 이용해주시기 바랍니다.</p><h3 id="">개발</h3><p><a href='https://github.com/Sangdol/python-test-driven-learning'>Python</a>을 주로 사용하며 이전에는 <a href='https://github.com/Sangdol/java-test-driven-learning'>Java</a>, <a href='https://github.com/Sangdol/node-test-driven-learning'>JavaScript</a>, <a href='https://github.com/Sangdol/scala-test-driven-learning'>Scala</a>를 이용해 개발하였습니다.</p><p>가끔 취미로 <a href='https://github.com/Sangdol/clojure-test-driven-learning'>Clojure</a>를 사용하며 해당 블로그는 <a href='https://iamsang.com/blog/2020/10/10/custom-static-site-generator/'>Clojure를 이용해 만든 커스텀 정적사이트생성기</a>를 통해 만들어졌습니다.</p><p><a href='https://github.com/Sangdol/vimscript-test-driven-learning'>Vimscript</a>, <a href='https://github.com/Sangdol/lua-test-driven-learning'>Lua</a> (그리고 <a href='https://github.com/Sangdol/hammerspoon-config'>Hammerspoon</a>), bash, zsh, fish script, Alfred, Raspberry Pi 등을 이용해 자동화하는 것을 좋아합니다.</p><p>맥북을 이용해 개발하며 툴은 <a href='https://github.com/Sangdol/vimrc'>nvim</a>, iTerm2를 사용합니다.</p>
+    <p>안녕하세요, 이상현입니다.</p><p><a href='https://iamsang.com/blog/2017/10/30/berlin-over-silicon-valley/'>독일</a>에 살며 소프트웨어 엔지니어로 일하고 있습니다.</p><h3 id="">글</h3><p>블로그 이외에 다음과 같은 곳에서 글을 쓰고 있습니다.</p><ul><li><a href='https://iamsang.com/en/'>영어 블로그</a></li><li><a href='http://techneedle.com/archives/author/sanghyun'>테크니들</a></li><li><a href='https://twitter.com/sangdolha'>트위터</a></li><li><a href='https://careerly.co.kr/profiles/414463'>커리어리</a></li><li><a href='https://stackoverflow.com/users/524588/sanghyun-lee'>스택오버플로</a></li></ul><p>글에 대한 의견이나 궁금한 사항은 이메일(hammerha@gmail.com)을 통해 알려주시면 답변 드리겠습니다. 블로그 새 글 소식을 받고 싶으신 분은 페이지 아래 양식을 통해 이메일 구독하거나 <a href='https://twitter.com/sangdolha'>트위터</a>를 이용해주시기 바랍니다.</p><h3 id="">개발</h3><p><a href='https://github.com/Sangdol/python-test-driven-learning'>Python</a>을 주로 사용하며 이전에는 <a href='https://github.com/Sangdol/java-test-driven-learning'>Java</a>, <a href='https://github.com/Sangdol/node-test-driven-learning'>JavaScript</a>, <a href='https://github.com/Sangdol/scala-test-driven-learning'>Scala</a>를 이용해 개발하였습니다.</p><p>가끔 취미로 <a href='https://github.com/Sangdol/clojure-test-driven-learning'>Clojure</a>를 사용하며 해당 블로그는 <a href='https://iamsang.com/blog/2020/10/10/custom-static-site-generator/'>Clojure를 이용해 만든 커스텀 정적사이트생성기</a>를 통해 만들어졌습니다.</p><p><a href='https://github.com/Sangdol/vimscript-test-driven-learning'>Vimscript</a>, <a href='https://github.com/Sangdol/lua-test-driven-learning'>Lua</a> (그리고 <a href='https://github.com/Sangdol/hammerspoon-config'>Hammerspoon</a>), bash, zsh, fish script, Alfred, Raspberry Pi 등을 이용해 자동화하는 것을 좋아합니다.</p><p>맥북을 이용해 개발하며 툴은 <a href='https://github.com/Sangdol/vimrc'>nvim</a>, iTerm2를 사용합니다.</p>
 </div>
     <section class="signup">
         <div class="container2">
