--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
 
       <div>
-          I'm a software engineer from South Korea and currently live in Berlin.
+          I'm a software engineer from South Korea and currently live in Germany.
       </div>
 
       <div>
