--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko-kr">
 <head>
-    <title>이상현 IN 베를린 :: Thank You</title>
-    <meta name="description" content="베를린 사는 소프트웨어 엔지니어 이야기">
+    <title>이상현 IN 유럽 :: Thank You</title>
+    <meta name="description" content="유럽 사는 소프트웨어 엔지니어 이야기">
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow">
-    <meta name="description" content="베를린 사는 소프트웨어 엔지니어 이야기">
+    <meta name="description" content="유럽 사는 소프트웨어 엔지니어 이야기">
     <meta name="twitter:title" content="Thank You" />
-    <meta name="twitter:description" content="베를린 사는 소프트웨어 엔지니어 이야기" />
+    <meta name="twitter:description" content="유럽 사는 소프트웨어 엔지니어 이야기" />
     <meta name="twitter:creator" content="@sangdolha" />
     <meta name="twitter:card" content="summary">
 
@@ -111,7 +111,7 @@
                     <div class="name">
                         이상현
                         <span class="colored" style="font-weight:100">in</span>
-                        <span style="font-weight:300">베를린</span>
+                        <span style="font-weight:300">유럽</span>
                     </div>
                 </a>
             </div>
@@ -119,7 +119,7 @@
     </section>
 
 <div class="container article">
-    <p>구독해주셔서 감사합니다!</p><p>저는 현재 독일 베를린에 살며 이커머스 기업 <a href='https://tech.zalando.com'>잘란도(Zalando)</a>에서 개발자로 일하고 있습니다.</p><p>블로그 이외에 <a href='http://techneedle.com/archives/author/sanghyun'>테크니들</a>을 통해 가끔 글을 쓰고 있습니다.</p><p>글에 대한 의견이나 궁금한 사항은 이메일(hammerha@gmail.com)을 통해 알려주시면 감사하겠습니다.</p><p><img src="https://iamsang.com/img/thank-you.jpg" alt="Thank you from Berlin" /></p>
+    <p>구독해주셔서 감사합니다!</p><p>저는 현재 독일에서 개발자로 일하고 있습니다.</p><p>글에 대한 의견이나 궁금한 사항은 이메일(hammerha@gmail.com)을 통해 알려주시면 감사하겠습니다.</p><p><img src="https://iamsang.com/img/thank-you.jpg" alt="Thank you from Berlin" /></p>
 </div>
     <section class="signup">
         <div class="container2">
